Fixed unwanted scrollbar in pages

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -67,7 +67,7 @@
 .m-t-xxs{margin-top: 1px;}
 .m-t-xs{margin-top: 5px;}
 .m-t-sm{margin-top: 10px;}
-.m-t{margin-top: 15px}
+.m-t{padding-top: 15px}
 .m-t-md{margin-top: 20px;}
 .m-t-lg{margin-top: 30px;}
 .m-t-xl{margin-top: 40px;}
